--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,13 @@ html {
 }
 
 #header {
+    position: fixed;  /*thuộc tính fixed làm mất block - tự động chiếm hết không gian*/ 
+    top: 0;
+    left: 0;
+    right: 0;
     height: 46px;
     background-color: #000;
+    z-index: 1;
 }
 
 #nav, .subnav {
@@ -103,8 +108,31 @@ html {
 
 #slider {
     min-height: 600px;
-    
+    margin-top: 46px;
+    padding-top: 66.67%;
+    background: url('/assets/img/slider/slider1.png') top center / cover no-repeat ;
+    position: relative;
 }
+
+
+#slider .text-content {
+    position: absolute;
+    bottom: 10%;
+    color: #fff;
+    left: 70%;
+    font-size: xx-large;
+}
+
+#slider .text-heading {
+    font-weight: 500px;
+    font-size: 50px;
+}
+
+#slider .text-description {
+    font-size: xx-large;
+    margin-top: 25px;
+}
+
 
 #content {
 
