--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,13 @@
 html {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
 #main {
 
+}
+
+.clear {
+    clear: both;
 }
 
 #header {
@@ -136,6 +141,57 @@ html {
 
 #content {
 
+}
+
+#content .content-section {
+    width: 800px;
+    padding: 64px 0;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+#content .section-heading {
+    margin: 10px 0;
+    font-size: 30px;
+    font-weight: 500px;
+    letter-spacing: 4px;
+    text-align: center;
+}
+
+#content .section-sub-heading {
+    margin-top: 25px;
+    font-size: 15px;
+    text-align: center;
+    font-style: italic;
+    opacity: 0.6;
+}
+
+#content .about-text {
+    margin-top: 25px;
+    font-size: 15px;
+    text-align: justify;
+    line-height: 1.6;
+}
+
+#content .members-list {
+    margin-top: 48px;
+    text-align: center;
+}
+
+#content .member-item {
+    float: left;
+    width: calc(100%/3);
+}
+
+#content .member-name {
+    font-size: 15px;
+}
+
+#content .member-img {
+    margin-top: 15px;
+    width: 252px;
+    border-radius: 4px;
 }
 
 #footer {
