--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,10 @@ html {
     clear: both;
 }
 
+.text-white {
+    color: #fff !important;
+}
+
 #header {
     position: fixed;  /*thuộc tính fixed làm mất block - tự động chiếm hết không gian*/ 
     top: 0;
@@ -193,6 +197,46 @@ html {
     width: 252px;
     border-radius: 4px;
 }
+
+/* TOur section */
+.tour-section {
+    background-color: #000;
+}
+
+.tickets-list {
+    background-color: #fff;
+    margin-top: 40px;
+    list-style: none;
+}
+
+.tickets-list li {
+    font-size: 15px;
+    padding: 11px 16px;
+    border-bottom: 1px solid #ddd;
+    color: #757575;
+}
+
+.tickets-list .sold-out {
+    background-color: #f44336;
+    color: #fff;
+    font-size: 15px;
+    padding: 3px 4px;
+    margin-left: 16px;
+}
+
+.tickets-list .quantity {
+    float: right;
+    width: 24px;
+    height: 24px;
+    background-color: #000;
+    color: #fff;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 24px;
+    margin-top: -3px;
+    margin-right: 6px;
+}
+
 
 #footer {
 
