--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,16 +126,16 @@ html {
 #slider .text-content {
     position: absolute;
     top: 12%;
-    color: #fff;
+    color: rgb(253, 253, 253);
     right: 0;
     left: 0;
     text-align: center;
-    opacity: 0.95;
+    opacity: 0.8;
 }
 
 #slider .text-heading {
     font-weight: 500;
-    font-size: 24px;
+    font-size: 40px;
 }
 
 #slider .text-description {
@@ -244,6 +244,66 @@ html {
     margin-top: -3px;
     margin-right: 6px;
 }
+
+
+/* Places */
+.places-list {
+    margin-top: 32px;
+    margin-left: -8px;  /*kỹ thuật padding margin âm*/
+    margin-right: -8px;
+    padding-bottom: 48px;
+}
+
+.place-item {
+    float: left;
+    width: 33.33333%; /* vì cố định item chứa img bằng 1/3 nên khi padding thì img sẽ thụt lại*/
+    padding: 8px;
+}
+
+.place-img {
+    width: 100%;
+    display: block;
+}
+
+.place-img:hover {
+    opacity: 0.6;
+}
+
+.place-body {
+    background-color: #fff;
+    padding: 16px;
+    font-size: 15px;
+}
+
+.place-heading {
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.place-time {
+    margin-top: 15px;
+    color: #757575;
+}
+
+.place-desc {
+    margin-top: 15px;
+    line-height: 1.6;
+}
+
+.place-buy-btn {
+    color: #fff;
+    background-color: #000;
+    text-decoration: none;
+    padding: 11px 16px;
+    display: inline-block;
+    margin-top: 15px;
+}
+
+.place-buy-btn:hover {
+    color: #000;
+    background-color: #ccc;
+}
+
 
 
 #footer {
