--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,3 +309,141 @@ html {
 #footer {
 
 }
+
+/* Modal */
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
+
+.open {
+    display: flex;
+}
+
+.modal-container {
+    background-color: #fff;
+    width: 900px;
+    max-width: calc(100% - 32px); /*không cho sát vào lề khi thu nhỏ màn hình*/
+    min-height: 200px;
+    position: relative;
+    animation: modalFadeIn ease 0.5s;
+}
+
+.modal-close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: #fff;
+    padding: 12px;
+    cursor: pointer;
+    opacity: 0.85;
+}
+
+.modal-close:hover {
+    color: #000;
+    background-color: #ccc;
+    opacity: 1;
+}
+
+.modal-header {
+    background-color: #009688;
+    height: 130px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    color: #fff;
+}
+
+.modal-heading-icon {
+    margin-right: 12px;
+}
+
+.modal-body {
+    padding: 16px;
+}
+
+.modal-label {
+    display: block;
+    font-size: 15px;
+    color: #000;
+    margin-bottom: 12px;
+}
+
+.modal-input {
+    border: 1px solid #ccc;
+    width: 100%;
+    padding: 10px;
+    font-size: 15px;
+    margin-bottom: 24px;
+}
+
+#buy-tickets {
+    background-color: #009688;
+    color: #fff;
+    width: 100%;
+    font-size: 15px;
+    padding: 18px;
+    cursor: pointer;
+    border: none;
+}
+
+#buy-tickets:hover {
+    opacity: 0.9;
+}
+
+.modal-footer {
+    padding: 16px;
+}
+
+.modal-footer a {
+    color: #2196F3;
+}
+
+.modal-footer-close {
+    color: #fff;
+    background-color: #f44336;
+    padding: 10px;
+    display: inline;
+    font-size: 14px;
+    opacity: 0.85;
+    border: none;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.modal-footer-close:hover {
+    color: #000;
+    background-color: #ccc;
+    opacity: 1;
+}
+
+.modal-help {
+    text-align: right;
+    display: inline-block;
+    float: right;
+    font-size: 15px;
+    margin-top: 2px;
+}
+
+.modal-help a:hover {
+    color: #89298f;
+}
+
+@keyframes modalFadeIn {
+    from {
+        opacity: 0.8;
+        transform: translateY(-150px);
+    } 
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
