--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,22 +9,78 @@
 3. Màu sắc
 4. Kiểu dáng, style, hình...
 */
+
+/* Common */
 html {
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    scroll-behavior: smooth;  
 }
 
 #main {
 
 }
 
+.row {
+    margin-left: -8px;
+    margin-right: -8px;
+}
+
+.column {
+    float: left;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+.column-third {
+    width: 33.33333%;
+}
+
+.column-half {
+    width: 50%;
+}
+
+.column-full {
+    width: 100%;
+}
+
+.mt-8 {
+    margin-top: 8px !important;
+}
+
+.mt-16 {
+    margin-top: 16px !important;
+}
+
+.mbt-112 {
+    margin-bottom: 112px !important;
+}
+
 .clear {
     clear: both;
+}
+
+.btn {
+    color: #fff;
+    background-color: #000;
+    text-decoration: none;
+    padding: 11px 16px;
+    display: inline-block;
+    margin-top: 15px;
+    cursor: pointer;
+}
+
+.pull-right {
+    float: right !important;
 }
 
 .text-white {
     color: #fff !important;
 }
 
+.text-center {
+    text-align: center !important;
+}
+/* Main */
 #header {
     position: fixed;  /*thuộc tính fixed làm mất block - tự động chiếm hết không gian*/ 
     top: 0;
@@ -143,6 +199,7 @@ html {
     margin-top: 8px;
 }
 
+/* Content */
 
 #content {
 
@@ -150,10 +207,10 @@ html {
 
 #content .content-section {
     width: 800px;
-    padding: 64px 0;
+    padding: 64px 0 112px 0;
     margin-left: auto;
     margin-right: auto;
-
+    
 }
 
 #content .section-heading {
@@ -179,17 +236,8 @@ html {
     line-height: 1.6;
 }
 
-#content .members-list {
-    text-align: center;
-}
-
-#content .member-item {
-    float: left;
-    width: calc(100%/3);
-    margin-top: 44px;
-}
-
 #content .member-name {
+    margin-top: 44px;
     font-size: 15px;
 }
 
@@ -201,8 +249,9 @@ html {
     border-radius: 4px;
 }
 
-#content .member-item2 {
-    margin-left: 16%;
+#content .member-column-half {
+    display: flex;
+    justify-content: center;
 }
 
 
@@ -249,15 +298,6 @@ html {
 /* Places */
 .places-list {
     margin-top: 32px;
-    margin-left: -8px;  /*kỹ thuật padding margin âm*/
-    margin-right: -8px;
-    padding-bottom: 48px;
-}
-
-.place-item {
-    float: left;
-    width: 33.33333%; /* vì cố định item chứa img bằng 1/3 nên khi padding thì img sẽ thụt lại*/
-    padding: 8px;
 }
 
 .place-img {
@@ -290,24 +330,69 @@ html {
     line-height: 1.6;
 }
 
-.place-buy-btn {
-    color: #fff;
-    background-color: #000;
-    text-decoration: none;
-    padding: 11px 16px;
-    display: inline-block;
-    margin-top: 15px;
-}
-
 .place-buy-btn:hover {
     color: #000;
     background-color: #ccc;
 }
 
+/* Contact-form */
+.contact-content {
+    margin-top: 48px;
+}
 
+.contact-info {
+    font-size: 18px;
+    line-height: 1.5;
+}   
+
+.contact-info i[class*="ti-"] { /*chọn các thẻ i trong class có chứa "ti-" */
+    width: 30px;
+    display: inline-block;
+}
+
+.contact-form {
+    font-size: 15px;
+}
+
+.contact-form .form-control {
+    padding: 10px;
+    border: 1px solid #ccc;
+    width: 100%;
+    outline: none;
+}
+
+/* Map Section */
+.map-section img {
+    width: 100%;
+}
 
 #footer {
+    padding: 64px 16px;
+    text-align: center;
+}
 
+#footer .social-list {
+    font-size: 24px;
+}
+
+#footer .social-list a {
+    color: rgba(0, 0, 0, 0.6);
+    text-decoration: none;
+}
+
+#footer .copyright a:hover,
+#footer .social-list a:hover {
+    opacity: 0.4;
+}
+
+#footer .copyright {
+    font-size: 15px;
+    margin-top: 15px; 
+    color: rgba(0, 0, 0, 0.6);
+}
+
+#footer .copyright a {
+    color: rgba(0, 0, 0, 0.6)
 }
 
 /* Modal */
