--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,7 +191,7 @@ html {
 #slider {
     margin-top: 46px;
     padding-top: 56.25332624%;
-    background: url('/assets/img/slider/slider1.jpg') top center / cover no-repeat  ;
+    background: url('../img/slider/slider1.jpg') top center / cover no-repeat  ;
     position: relative;
 }
 
@@ -214,6 +214,7 @@ html {
 #slider .text-description {
     font-size: 15px;
     margin-top: 8px;
+    text-shadow: 0 0 1px #000;
 }
 
 /* Content */
@@ -369,6 +370,16 @@ html {
 .contact-info i[class*="ti-"] { /*chọn các thẻ i trong class có chứa "ti-" */
     width: 30px;
     display: inline-block;
+}
+
+.contact-info a {
+    color: #101aef;
+    opacity: 0.8;
+}
+
+.contact-info a:hover {
+    color: #101aef;
+    opacity: 1;
 }
 
 .contact-form {
