--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -108,8 +108,8 @@
 
     #slider .text-description {
         font-size: small;
+        margin-top: 2px;
     }
-
 
     #content .member-img {
         width: 60%;
