--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,12 +209,12 @@ html {
 #slider .text-heading {
     font-weight: 500;
     font-size: 40px;
+    text-transform: uppercase;
 }
 
 #slider .text-description {
     font-size: 15px;
     margin-top: 8px;
-    text-shadow: 0 0 1px #000;
 }
 
 /* Content */
